--- a/src/Components/Actors/Style.css
+++ b/src/Components/Actors/Style.css
@@ -1,24 +1,39 @@
 .cast{
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: auto;
+    cursor: pointer;
+    
 }
 .cast img{
-    width: 100%;
-    height: 100%;
+    width: 80px;
+    height:80px;
     object-fit: cover;
     border-radius: 50%;
 }
 .castContainer h4 {
     font-size: 25px;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   .castContainer{
-    margin: 50px 0px;
+    margin: 30px 0px;
+    
   }
   .casts{
     width: 100%;
+    height: auto;
   
+  }
+  .cast .name{
+    text-wrap: wrap;
+    margin-top: 10px;
+    margin-bottom: 0px;
+ 
+    font-size: 14px;
+  }
+  .cast .character{
+    opacity: .7;
+    font-size: 12px;
   }
 
 
@@ -27,8 +42,18 @@
         font-size: 20px;
         margin-bottom: 20px;
       }
+    
     .cast{
-        width: 60px;
-        height: 60px;
-    }
+      width: auto;
+      
+      height: auto;
+      cursor: pointer;
+  }
+  .cast img{
+      width: 60px;
+      height:60px;
+      object-fit: cover;
+      border-radius: 50%;
+  }
+  
   }
