--- a/src/Components/SmallCard/style.css
+++ b/src/Components/SmallCard/style.css
@@ -1,20 +1,21 @@
-.posterImage{
+.posterImage1{
     width: 100%;
-    height: 300px;
+    height: 250px;
     
   
 }
-.movieCard{
-    width: 220px;
+.movieCard1{
+    width: 180px;
     cursor: pointer;
-    
+    position: relative;
     display: flex;
     flex-wrap: wrap;
+    margin: 10px auto;
    
 }
  
   
-.posterImage img{
+.posterImage1 img{
     width: 100%!important;
     height: 100%!important;
     object-fit: cover;
@@ -52,31 +53,20 @@
 .posterImage{
     position: relative;
 }
-.circle{
-    position: absolute;
-    top: -17px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: all .3s ease;
-    padding: 5px;
-    width: 50px;
-    background-color: #020221;
-    border-radius: 50%;
-    
-    z-index: 30;
-}
+ 
 
 @media only screen and (max-width: 600px) {
     
-    .posterImage{
+    .posterImage1{
         width: 100%!important;
         height: 280px!important;
          
     }
-    .movieCard{
-        width: 100%;
-       
+    .movieCard1{
+        width: 200px;
+        
     }
+     
     .circle{
         width: 50px;
         left: 50%;
