--- a/src/Components/SwitchTabs/Style.css
+++ b/src/Components/SwitchTabs/Style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: -15px !important;
 }
 .tabs{
     display: flex;
@@ -14,8 +15,8 @@
     border-radius: 20px;
     transition: all .3s ease;
 }
-.CaroHeader h3{
-    font-size: 25px;
+.CaroHeader h4{
+    font-size: 22px;
     font-weight: 700;
 }
 .active {
