--- a/src/Pages/Explore/Style.css
+++ b/src/Pages/Explore/Style.css
@@ -2,15 +2,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 90%;
+    margin: 0 auto;
      
 }
 .selectContainer{
 display: flex;
+
 }
 .sort{
     color: black;
     font-size: 14px;
     margin: 0px 10px;
+    display: flex;
+     
+}
+.sort input{
+    display: flex;
 }
 .sort :focus{
     outline: 0px;
@@ -20,8 +28,30 @@ display: flex;
     font-size: 25px;
     font-weight: 600;
 }
-
- 
+.Results{
+    width: 90%;
+    margin: 0 auto;
+    display:  flex;
+    gap: 30px!important;
+     
+   
+}
+.more{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.more button{
+    border: 0px;
+    padding: 5px 30px;
+    border-radius: 6px;
+    font-size: 15px;
+    font-weight: 500;
+    background-color:  rgb(214, 89, 11) ;
+    color: white;
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 600px) {
 .searchResults{
@@ -32,4 +62,47 @@ display: flex;
     margin-bottom: 15px;
     font-weight: 600;
 }
+.Results .movieCard{
+    width: 160px;
+    cursor: pointer;
+    
 }
+.Results{
+    width: 100%;
+    margin: 0 auto;
+     
+    display:  flex;
+    gap: 15px!important;
+     
+   
+}
+}
+ 
+
+/* @media only screen and (max-width: 600px) {
+    
+    .posterImage{
+        width: 100%!important;
+        height: 280px!important;
+        background-color: gray;
+    }
+    .circle{
+        width: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+    }
+      
+      
+    
+    .contents h5{
+        font-size: 16px;
+    }
+    .contents h6{
+        font-size: 10px;
+        opacity: .6;
+    }
+    
+   
+   
+} */
