--- a/src/Pages/Home/HeroBanner/Style.css
+++ b/src/Pages/Home/HeroBanner/Style.css
@@ -88,12 +88,13 @@ border-bottom-right-radius: 20px;
 
 .contentWrapper p{
     font-size: 18px;
-    margin-bottom: 50px;
+    margin-bottom: 32px;
 }
 @media only screen and (max-width: 600px) {
     .Banner{
         height: 100vh;
         width: 100%;
+        background-position: center;
     }
     .contentWrapper h1{
         font-size: 50px;
