--- a/src/Pages/Nav/Style.css
+++ b/src/Pages/Nav/Style.css
@@ -16,10 +16,12 @@
     color: white;
     transition: all .3s ease;
     z-index: 1000;
+    
 }
 .Links{
     display: flex;
 }
+
 .headerTitle{
     text-decoration: none;
     font-size: 18px ;
@@ -41,8 +43,8 @@
    
 }
 .headerImg{
-    width: 60px;
-    height: 65px;
+    width: 50px;
+    height: 55px;
      
     
 }
@@ -65,7 +67,9 @@
     display: block !important;
 }
 
-
+.searchForm{
+    background-color: transparent;
+}
 .searchForm input{
     padding: 5px 20px;
      border-top-left-radius: 20px;
@@ -117,16 +121,21 @@ border-bottom-left-radius: 20px;
 
 .header .searchForm{
      position: absolute;
-     top: 100px;
-     left: 80px;
-     
+     top: 80px;
+     left: 50%;
+     width: auto!important;
+     transform: translateX(-50%);
+    
      display: none;
      z-index: 1;
      background-color: inherit;
 
 }
+.searchForm .btn{
+    padding: 5px 10px;
+}
 .searchForm input{
-    width: 300px;
+    width: 180px;
     
     
 }
