--- a/src/Pages/PersonDetail/Style.css
+++ b/src/Pages/PersonDetail/Style.css
@@ -420,6 +420,7 @@
     width: 100%;
     height: 50vh;
   }
+  
   .imagesss {
     width: 100% !important;
     display: flex;
@@ -429,8 +430,9 @@
   }
    
   .imagesss img {
-    width: 45%!important;
-    margin: 0 auto;
+    width: 47%!important;
+    height: 250px;
+     margin: 5px auto;
   }
 
  
