--- a/src/Pages/Detail/Style.css
+++ b/src/Pages/Detail/Style.css
@@ -29,12 +29,15 @@
 .Dcontents {
   position: relative;
   width: 60%;
+  
+  
   flex-wrap: wrap;
   height: auto;
   margin: 0 auto;
   margin-top: -250px;
   display: flex;
   gap: 10px;
+  
 }
 
 .Poster {
@@ -49,6 +52,7 @@
 }
 .contentDetail {
   padding: 10px;
+ 
   width: 100%-200px;
 }
 .contentDetail h4 {
@@ -63,17 +67,16 @@
 }
 .Detailgenres {
   display: flex;
-  width: full;
-  flex-wrap: wrap;
-gap: 5px;
+   
+  width: 90%;
 }
 .Dgenre {
+  
   font-size: 12px;
   border-radius: 5px;
   padding: 5px 10px;
-  ;
+  margin: 0px 5px;
   background-color: rgba(43, 41, 41, 0.73);
-  
 }
 .ratingAndTrailer {
   display: flex;
@@ -137,6 +140,7 @@ gap: 5px;
   width: 600px;
   text-wrap: wrap;
   margin-top: 10px;
+  
 }
 .OverView .overviewText {
   font-size: 14px;
@@ -154,7 +158,7 @@ gap: 5px;
 }
 .Director {
   display: flex;
-
+ /* width: 85%!important; */
   gap: 10px;
   letter-spacing: 0.02em;
 }
@@ -173,8 +177,8 @@ gap: 5px;
   opacity: 0.8;
 }
 .directors {
-  width: 600px;
-
+  width: 500px!important;
+ 
   display: flex;
   flex-wrap: wrap;
 }
