--- a/src/Components/MovieCard/Style.css
+++ b/src/Components/MovieCard/Style.css
@@ -9,3 +9,12 @@
     width: 300px!important;
     text-wrap: wrap;
  }
+
+
+
+
+ @media only screen and (max-width: 600px) {
+    .maintool{
+       display: none;
+     }
+ }
