--- a/src/Pages/AdsSection/style.css
+++ b/src/Pages/AdsSection/style.css
@@ -1,15 +1,22 @@
 .adsmain {
-  width: 100%;
+  width: 80%;
   height: 500px;
   background-color: rgb(33, 32, 32);
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("/public/ads1.jpg");
+  background: url("/public/poster.jpg");
   object-fit: cover;
   position: relative;
-  margin: 40px 0px;
+  margin: 40px auto;
+
+  margin-bottom: 60px;
  
+}
+.googleButton{
+  width: 30px;
+  height: 30px;
+
 }
 .adstitle {
   font-size: 25px;
@@ -19,7 +26,12 @@
 .backdrop{
     width: 100%;
     height: 100%;
-    background:rgba(0, 0, 0, 0.236);
+    background-color:rgba(0, 0, 0, 0.256);
+    backdrop-filter: blur(1px);
+}
+.adsmain .btns button{
+  display: flex;
+  gap: 20;
 }
 
 .adsmain button {
@@ -45,6 +57,14 @@
   
  
 }
+.downloadOn{
+  display:  flex;
+  flex-direction: column;
+}
+.downloadOn .dl{
+  font-size: 12px;
+  opacity: 69;
+}
 .btns .icon {
   font-size: 20px;
 }
@@ -55,9 +75,14 @@
 }
 
 button:nth-of-type(1) {
-  border: 1px solid rgb(214, 89, 11);
-  background-color: rgb(214, 89, 11);
-  color: wheat;
+  border: 2px solid white;
+  background-color: transparent;
+  color:white
+}
+button:nth-of-type(2) {
+  border: 2px solid white;
+  background-color: transparent;
+  color:white
 }
 
 @media only screen and (max-width: 600px) {
@@ -75,6 +100,7 @@ button:nth-of-type(1) {
     }
     .adsmain{
         height: 400px;
+        width: 100%;
     }
 
 }
