--- a/src/Pages/Top/style.css
+++ b/src/Pages/Top/style.css
@@ -1,10 +1,12 @@
 .topMovie{
     width: 80%;
-    height: 400px;
+    height: auto;
+    padding: 20px 0px;
     align-items: center;
-    margin: 20px auto;
+    margin: 0px auto;
     display: flex;
     gap: 20px;
+    
 }
 .leftImageSection img{
     width: 500px;
